# mcpix-sdk-internal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ESPECIFICAÇÃO TÉCNICA_ ARQUITETURA DE SDK MULTIPLATAFORMA EM RUST.md  QUICKSTART.md  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/scripts/: ci-shell.sh
.github/workflows/: build.yml  ci.yml  fuzz.yml  log_commands.md  release.yml  reproducibility.yml  samples-mobile.yml
bindings/c/include/: mcpix.h
bindings/dotnet/: MCPixSDK.csproj
bindings/dotnet/src/: McpixReceiver.cs
bindings/kotlin/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/aar/: build.gradle.kts  consumer-rules.pro  settings.gradle.kts
bindings/kotlin/src/main/kotlin/uniffi/mcpix_uniffi/: mcpix_uniffi.kt
bindings/kotlin/src/test/kotlin/: SmokeTest.kt
bindings/swift/: Package.swift
bindings/swift/Sources/MCPixSDK/: mcpix_uniffi.swift  mcpix_uniffiFFI.h  mcpix_uniffiFFI.modulemap
crates/mcpix-backup/: Cargo.toml
crates/mcpix-backup/src/: format.rs  kdf.rs  lib.rs
crates/mcpix-bank-payer-mock/: Cargo.toml
crates/mcpix-bank-payer-mock/src/: lib.rs
crates/mcpix-bank-receiver/: Cargo.toml
crates/mcpix-bank-receiver/src/: http_client.rs  http_server.rs  lib.rs  mtls.rs  mtls_client.rs  mtls_server.rs  ocsp.rs  wire.rs
crates/mcpix-bank-receiver/tests/: http_e2e.rs  mtls_e2e.rs  ocsp_e2e.rs
crates/mcpix-core/: Cargo.toml
crates/mcpix-core/src/: crypto.rs  error.rs  integrity.rs  lib.rs  signature.rs  state.rs  traits.rs  transport_field.rs  types.rs  version.rs
crates/mcpix-core/tests/: corpus_replay.rs  properties.rs
crates/mcpix-core/trusted_keys/: README.md  release.pub
crates/mcpix-embed/: Cargo.toml
crates/mcpix-embed/src/: crypto.rs  lib.rs  qr.rs  restore.rs  storage.rs  transport_field.rs  types.rs
crates/mcpix-embed/tests/: backup_cross_validate.rs  cross_validate.rs
crates/mcpix-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/mcpix-ffi/src/: error.rs  handle.rs  lib.rs  receiver_api.rs  strings.rs
crates/mcpix-receiver-sdk/: Cargo.toml
crates/mcpix-receiver-sdk/src/: clock.rs  integrity_runtime.rs  lib.rs  memory_store.rs  monotonic_counter.rs  sealed_store.rs  sqlite_store.rs  system_random.rs  timestamp_counter.rs
crates/mcpix-receiver-sdk/tests/: integrity_against_dist.rs
crates/mcpix-uniffi/: Cargo.toml
crates/mcpix-uniffi/src/: lib.rs
crates/mcpix-wasm/: Cargo.toml
crates/mcpix-wasm/src/: lib.rs
crates/mcpix-wasm/tests/: host_smoke.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
docs/: ARCHITECTURE.md  CRYPTO.md  GLOSSARY.md  MTLS_REVOCATION.md  PCT_CLAIMS_MAPPING.md  PROTOCOL.md  README.md  SECURE_ELEMENT.md  SLSA.md  SLSA_L4_PROGRESS.md  THREAT_MODEL.md  VERSIONING.md
docs/adr/: 0001-domain-separated-hmac.md  0002-restricted-seed-id-alphabet.md  0003-constant-time-comparison.md  0004-zero-io-core.md  0005-ed25519-release-signing.md  0006-separated-ffi-vs-uniffi.md  0007-dual-counter-mode.md  0008-mtls-san-uri-identity.md  0009-no-std-subset-crate.md  0010-no-panic-policy.md  README.md
embedded/: Cargo.toml  memory.x
embedded-uno-q/: Cargo.toml  build.rs  memory.x
embedded-uno-q/.cargo/: config.toml
embedded-uno-q/src/: main.rs
embedded/.cargo/: config.toml
embedded/src/: main.rs
examples/: Cargo.toml  README.md  e2e_demo.rs
examples/android-sample/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/android-sample/app/: build.gradle.kts
examples/android-sample/app/src/main/: AndroidManifest.xml
examples/android-sample/app/src/main/java/com/mcpix/sample/: MainActivity.kt
examples/android-sample/app/src/main/res/layout/: activity_main.xml
examples/apple-wallet-appclip/: .gitignore  README.md  project.yml
examples/apple-wallet-appclip/AppClip/: BarcodeView.swift  ContentView.swift  Info.plist  NFCBeam.swift  PixGenerator.swift  PixTerminalAppClip.swift
examples/apple-wallet-appclip/Host/: HostApp.swift
examples/apple-wallet-appclip/pass/: README.md  pass.json
examples/arduino-uno-q-sample/: README.md
examples/dotnet-sample/: McpixSample.csproj  Program.cs  README.md
examples/embedded-demo/: README.md
examples/google-wallet-instant-app/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/google-wallet-instant-app/instantapp/: build.gradle.kts
examples/google-wallet-instant-app/instantapp/src/main/: AndroidManifest.xml
examples/google-wallet-instant-app/instantapp/src/main/java/br/com/suaempresa/identificacao/: NfcBeam.kt  PixCheckoutActivity.kt  PixGenerator.kt  PixTerminalScreen.kt  QrCode.kt
examples/google-wallet-instant-app/instantapp/src/main/res/values/: strings.xml
examples/google-wallet-instant-app/wallet/: README.md  generic_object.json
examples/google-wallet-instant-app/well-known/: assetlinks.json
examples/ios-sample/: Package.swift  README.md
examples/ios-sample/McpixSample/: ContentView.swift  McpixSampleApp.swift
examples/kotlin-jvm-sample/: README.md  build.gradle.kts  settings.gradle.kts
examples/kotlin-jvm-sample/src/main/kotlin/: Main.kt
examples/web-demo/: README.md  index.html
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/: README.md
fuzz/fuzz_targets/: fuzz_sums_line.rs  fuzz_transport_parse.rs  fuzz_verify_combined.rs
fuzz/regression/: README.md
scripts/: verify-release.sh
xtask/: Cargo.toml
xtask/src/: main.rs
