[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true }
