[package]
name = "mcpix-backup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Crate `no_std`-friendly por padrão para que `mcpix-embed` consiga
# importar via feature `restore`. Default sem `std` — host habilita
# explicitamente via feature `std` (apenas conveniências de erro/IO).

[features]
default = []

[dependencies]
mcpix-core.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
bs58.workspace = true
zeroize = { workspace = true, default-features = false, features = ["derive"] }
rand_core = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
