[package]
name = "mcpix-bank-receiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
http-server = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json", "dep:base64"]
http-client = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:base64"]
# mTLS empilha sobre http-server/http-client: substitui o listener TCP
# do servidor por TLS termination com client cert verification, e a
# `Identity` do cliente passa a vir do certificado em vez do header.
mtls = [
    "http-server",
    "http-client",
    "dep:axum-server",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:x509-parser",
]
# OCSP live query — incremento sobre stapling (S14). Caller faz a
# consulta out-of-band ao responder antes de operações sensíveis.
# Phase 1: builder + parser + HTTP. Verificação de assinatura é
# responsabilidade do integrator (cert chain do mTLS); docs/MTLS_REVOCATION.md
# detalha.
ocsp = [
    "http-client",
    "dep:x509-ocsp",
    "dep:x509-cert",
    "dep:sha1",
    "dep:rustls-pemfile",
]

[dependencies]
mcpix-core.workspace = true
parking_lot.workspace = true
thiserror.workspace = true

axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

axum-server = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
# OCSP support (feature `ocsp`)
x509-ocsp = { version = "0.2", optional = true, default-features = false, features = ["std", "builder"] }
x509-cert = { version = "0.2", optional = true, default-features = false, features = ["std"] }
sha1 = { version = "0.11", optional = true, features = ["oid"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
mcpix-bank-payer-mock = { workspace = true }
rcgen = { workspace = true }
# `time` é usada nos testes de CRL — rcgen 0.14 exige `OffsetDateTime`
# para `this_update`/`next_update` mas não re-exporta o crate.
time = "0.3"
