[package]
name = "mcpix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
thiserror.workspace = true
data-encoding.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
rand_core.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
proptest = { workspace = true }
