[package]
name = "mcpix-receiver-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
mcpix-core.workspace = true
parking_lot.workspace = true
rand_core.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }
mcpix-core = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
