[package]
name = "mcpix-receiver-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sqlite = ["dep:rusqlite"]
# Sealing AEAD para SealedSeedStore. ChaCha20-Poly1305 já está no
# workspace por causa de mcpix-backup (S12); aqui o reuso é gratuito.
sealed-store = ["dep:chacha20poly1305"]

[dependencies]
mcpix-core.workspace = true
parking_lot.workspace = true
rand_core.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }
mcpix-core = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
