[package]
name = "mcpix-uniffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "mcpix_uniffi"
# `cdylib` para Kotlin/Swift; `staticlib` para empacotamento em XCFramework iOS.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
mcpix-core.workspace = true
mcpix-receiver-sdk.workspace = true
mcpix-bank-receiver.workspace = true
mcpix-bank-payer-mock.workspace = true
uniffi = { workspace = true }
thiserror.workspace = true
