[package]
name = "mcpix-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Bindings WebAssembly do SDK. Empacotam o fluxo recebedor + simulação
# do lado pagador num único módulo wasm consumido pela demo browser em
# `examples/web-demo/`. cdylib é obrigatório para wasm-bindgen produzir
# o módulo ES.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mcpix-core.workspace = true
mcpix-receiver-sdk.workspace = true
wasm-bindgen = "0.2"
# Habilita `crypto.getRandomValues()` para `getrandom` em
# wasm32-unknown-unknown. Sem isso, `rand_core::OsRng` quebra no link.
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
