[package]
name = "uniffi-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Binário-wrapper: UniFFI exige um executável que rode `uniffi_bindgen_main()`
# vinculado contra a mesma versão de `uniffi` que a crate de scaffolding usa.
# Manter este binário no workspace evita drift de versão.

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
